# civ-autotile

./: .gitignore  LICENSE  README.md  Terrain.md
autotiler/: README.md  pubspec.yaml
autotiler/assets/utils/: convert.py
autotiler/lib/: main.dart  tile.dart
autotiler/test/: widget_test.dart
autotiler/web/: index.html  manifest.json
backend/: app.py  autotiler_pb2.py  pyproject.toml
protobuf/: autotiler.proto  gen_proto.ps1
