[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bernie Conrad <root@bernstern.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
Flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-restful = "^0.3.10"
protobuf = "^4.24.4"
ortools = "^9.7.2996"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
